Fix schema CSS with overflow on large tables.

--- a/dbinspector-client/src/app/table/table.component.css
+++ b/dbinspector-client/src/app/table/table.component.css
@@ -14,6 +14,10 @@
   flex: 1 1 auto;
 }
 
+.container {
+  overflow-x: auto;
+}
+
 table {
   width: 100%;
 }
